@@ -269,6 +269,24 @@ object_t assign(object_t o, symbol_t s, object_t v)
 }
 
 
+object_t extend(object_t this, symbol_t s, tuple_t argnames, object_t fnbody)
+{
+  object_t extender = 0;
+  object_t o = lookup(this, s);
+  if (!o)
+    // we create a new function in that case
+    o = new();
+  else {
+    extender = lookup(o, extend_sym);
+    if (extender) {
+      assert(1==0);
+      return 0;
+    }
+  }
+  // create a function
+  return assign(this, s, fn_fn(this, argnames, fnbody));
+}
+
 
 void rmslot(object_t o, symbol_t s) 
 {
